--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.7.3",
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5"
   },
