--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.9.2",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
+    "query-string": "^6.2.0",
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-chartjs-2": "^2.7.4",
