--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^1.0.0-beta.5",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.2",
+    "react-pose": "^4.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
   },
